# battlearena

./: Cargo.toml  README.md
abilities/: Cargo.toml
abilities/src/: lib.rs  registry.rs  systems.rs  types.rs
assets/abilities/: melee.ability.ron
assets/characters/: comini.ron  peta.ron
assets/models/: arena.scn  arena.scn.ron
assets/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs  setup.rs  systems.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs  plugin.rs  resources.rs
crates/client/src/game/: input.rs  mod.rs  net.rs  prediction.rs  render.rs  scene.rs  systems.rs
crates/client/src/game/input/: mod.rs
crates/client/src/game/net/: mod.rs  systems.rs
crates/client/src/game/prediction/: mod.rs  systems.rs
crates/client/src/game/render/: mod.rs
crates/client/src/game/scene/: mod.rs  systems.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  plugin.rs  resources.rs
crates/server/src/game/: mod.rs  systems.rs
crates/server/src/game/net/: mod.rs  systems.rs
crates/server/src/game/simulation/: mod.rs  systems.rs
crates/shared/: Cargo.toml
crates/shared/src/: components.rs  lib.rs  logic.rs  map.rs  physics.rs  protocol.rs  states.rs  tick.rs  types.rs
editor/: Cargo.toml
editor/src/: collider_gizmos.rs  file_dialog.rs  free_camera.rs  hierarchy.rs  lib.rs  main.rs  selection.rs  spawn.rs  transform_gizmo.rs  ui.rs
examples/common/: Cargo.toml
examples/common/src/: cli.rs
import/: Cargo.toml
import/src/: components.rs  gltf.rs  lib.rs
inputs/: Cargo.toml
inputs/src/: lib.rs
physics/: Cargo.toml
physics/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: client.rs  lib.rs  server.rs
scene/: Cargo.toml
scene/src/: components.rs  format.rs  lib.rs  load.rs  save.rs
server/: Cargo.toml
server/src/: main.rs  setup.rs  systems.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: cli.rs  client.rs  client_setup.rs  lib.rs  main.rs  protocol.rs  renderer.rs  server.rs  server_render.rs  server_setup.rs  shared.rs
src/client/: mod.rs  setup.rs  systems.rs
src/common/: cli.rs  client.rs  client_renderer.rs  mod.rs  server.rs  server_renderer.rs  shared.rs
src/renderer/: client.rs  mod.rs  server.rs
src/server/: mod.rs  setup.rs  systems.rs
