[package]
name = "battlearena"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "battlearena"
doc = false

[lib]
doc = false

[features]
default = ["client", "server"]
client  = ["lightyear/client"]
gui     = ["client", "bevy/2d", "bevy/bevy_ui", "bevy/bevy_winit", "bevy/bevy_picking"]
server  = ["lightyear/server"]
steam   = ["lightyear/steam"]

[dependencies]
lightyear = { version = "0.26.0", default-features = false, features = [
    "interpolation",
    "prediction",
    "replication",
    "input_native",
    "netcode",
    "udp",
] }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_log",
    "bevy_asset",
    "bevy_color",
    "bevy_state",
    "std",
    "multi_threaded",
    "keyboard",
    "x11",
] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
cfg-if = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
