[workspace]
members = ["protocol", "shared", "renderer", "client", "server"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18", features = ["bevy_state", "bevy_log", "reflect_auto_register"] }
lightyear = { version = "0.26.4", features = ["interpolation", "prediction", "replication", "input_native", "udp", "netcode"] }
avian2d = { version = "0.6.1", features = ["serialize", "debug-plugin"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.40"
async-compat = "0.2"
cfg-if = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
bevy-inspector-egui = { version = "0.36" }
bevy_egui = { version = "0.39" }
ron = { version = "0.12.0" }

protocol = { path = "protocol" }
shared = { path = "shared" }
renderer = { path = "renderer" }
physics = { path = "physics" }
inputs = { path = "inputs" }

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
