[package]
name = "lightyear_examples_common"
version = "0.26.4"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
edition = "2024"
description = "Common harness for the lightyear examples"
readme = "../README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
exclude = ["/tests"]

[features]
default = ["client", "server", "netcode", "udp"]
client = ["lightyear/client"]
server = ["lightyear/server"]
netcode = ["lightyear/netcode"]
udp = ["lightyear/udp"]
steam = ["lightyear/steam"]
debug = ["gui2d", "lightyear/debug"]
gui2d = [
  "dep:bevy-inspector-egui",
  "bevy/2d",
  "bevy/2d_bevy_render",
  "bevy/2d_api",
]
gui3d = [
  "dep:bevy-inspector-egui",
  "bevy/3d",
  "bevy/3d_bevy_render",
  "bevy/3d_api",
]

[dependencies]
lightyear = { version = "0.26.4", features = [
  "interpolation",
  "prediction",
  "replication",
  "webtransport",
  "webtransport_self_signed",
  "webtransport_dangerous_configuration",
  "websocket",
  "websocket_self_signed",
  "udp",
] }
async-compat = "0.2"
cfg-if = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bevy = { version = "0.18", features = [
  "bevy_state",
  "bevy_log",
  "reflect_auto_register",
] }
bevy-inspector-egui = { version = "0.36", optional = true }
bevy_egui = { version = "0.39", optional = true }
tracing = "0.1.40"
ron = { version = "0.12.0" }

[target."cfg(target_family = \"wasm\")".dependencies]
console_error_panic_hook = "0.1.7"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { version = "0.2", features = ["js"], package = "getrandom" }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[lib]
doc = false
